tests/idris2/perror004/expected
1/1: Building PError (PError.idr)
Error: Wrong number of 'with' arguments.

PError.idr:4:33--4:34
   |
 4 |     foo x y | True | False | 10 = x
   |                                 ^

